istio/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication

metadata:
  name: default
  namespace: enterprise

spec:
  mtls:
    mode: STRICT
