istio/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule

metadata:
  name: users-service
  namespace: enterprise

spec:
  host: users-service

  subsets:
    - name: v1
      labels:
        version: v1

    - name: v2
      labels:
        version: v2
