istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: users-service
  namespace: enterprise

spec:
  hosts:
    - users-service

  http:
    - route:
        - destination:
            host: users-service
            subset: v1
          weight: 90

        - destination:
            host: users-service
            subset: v2
          weight: 10
